# wsl-tui

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-RESEARCH.md  01-VERIFICATION.md
.planning/phases/02-core-distro-management-tui/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04-SUMMARY.md  02-05-PLAN.md  02-05-SUMMARY.md  02-CONTEXT.md  02-RESEARCH.md  02-VERIFICATION.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: BRD.md  KICKOFF_TUI.md  KICKOFF_WEB.md  PRD.md  SOW.md  THEME_GUIDELINES.md
docs/plans/: 2026-02-21-wsl-tui-design.md
wsl-core/: CLAUDE.md  Cargo.toml
wsl-core/src/: config.rs  error.rs  lib.rs
wsl-core/src/plugin/: mod.rs  registry.rs
wsl-core/src/storage/: json.rs  libsql.rs  mod.rs
wsl-core/src/wsl/: distro.rs  executor.rs  mod.rs
wsl-tui/: CLAUDE.md  Cargo.toml
wsl-tui/src/: action.rs  app.rs  keybindings.rs  main.rs  theme.rs
wsl-tui/src/ui/: confirm_modal.rs  dashboard.rs  help_overlay.rs  input_modal.rs  install_modal.rs  mod.rs  popup.rs  status_bar.rs  welcome.rs
wsl-web/: CLAUDE.md  Cargo.toml
wsl-web/src/: main.rs
