[package]
name = "wsl-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared library crate for WSL TUI — config, error types, storage, and plugin system"

[dependencies]
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
dirs = { workspace = true }
encoding_rs = { workspace = true }
tokio = { workspace = true }
libsql = { workspace = true }
async-trait = { workspace = true }
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3"
